@@ -1,3 +1,12 @@
+## Rails 3.0.16 doxo
+
+*   Hash.from_xml raises when it encounters type="symbol" or type="yaml".
+    Use Hash.from_trusted_xml to parse this XML.
+
+    CVE-2013-0156
+
+    *Jeremy Kemper*
+
 ## Rails 3.0.16 (Jul 26, 2012)
 
 *   No changes.
